--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <main class="site-main">
   <section class="form-section">
     <div class="form-section-inner">
-      <form class="form" autocomplete="off" action="htps://echo.htmlacademy.ru/" method="POST">
+      <form class="form" autocomplete="off" action="https://echo.htmlacademy.ru/" method="POST">
         <div class="form__right-box">
           <div class="form__left">
             <label class="form__label" for="Surname">Ism Familiya
