--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
         <button type="submit" class="form__btn">Jo’natish</button>
       </form>
       <div class="form-right-content">
-        <h1 class="form-right__title">Ux & Ui design</h1>
-        <p class="form-right__text">In the current tech scenario, one can’t predict what device their user will use to interact with a product. This is why it’s always a good idea to build something that supports all devices. However it is nearly impossible to design for every screen size with so many .</p>
+        <h1 class="form-right-title">Ux & Ui design</h1>
+        <p class="form-right-text">In the current tech scenario, one can’t predict what device their user will use to interact with a product. This is why it’s always a good idea to build something that supports all devices. However it is nearly impossible to design for every screen size with so many .</p>
       </div>
     </div>
   </section>
