--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <label class="form__last-lab">
           Message
-          <input class="form__last-inp" type="text" required  name="user_massage">
+          <input class="form__last-inp" type="text"  name="user_massage">
         </label>
         <button type="submit" class="form__btn">Jo’natish</button>
       </form>
